:new: Google Benchmark support
Problem:
- Google Benchmark library is not built-in, but projects often want it.

Solution:
- Add support for quickly adding some benchmarks.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/GUnit"]
 	path = vendor/GUnit
 	url = https://github.com/cpp-testing/GUnit.git
+[submodule "vendor/benchmark"]
+	path = vendor/benchmark
+	url = https://github.com/google/benchmark.git
