:new: Catch2 test capabilities
Problem:
- Not everybody uses Google Test/Mock. Other unit testing frameworks
  like Catch2 are popular.

Solution:
- Provide Catch2 integration.
- Port the current GoogleTest-based unit tests to Catch2.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/benchmark"]
 	path = vendor/benchmark
 	url = https://github.com/google/benchmark.git
+[submodule "vendor/catch2"]
+	path = vendor/catch2
+	url = https://github.com/catchorg/Catch2.git
