--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,4 @@ if ("${uppercase_CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
   add_subdirectory(perf)
 endif()
 add_subdirectory(unit)
+add_subdirectory(catch)
